--- a/menu.html
+++ b/menu.html
@@ -9,9 +9,9 @@
 <h1 align="center"><b><i>Galactic Menu</i></b></h1>
 <a href="home.html" target="rnindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="home.png" alt="Home"></a>
 <p></p>
-<a href="members.html" target="rnindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="about.png" alt="About"></a>
+<a href="members.html" target="rnindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="members.png" alt="Members"></a>
 <p></p>
-<a href="info/info.html" target="rnindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="projects.png" alt="Projects"></a>
+<a href="info/info.html" target="rnindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="info.png" alt="Info"></a>
 <p></p>
 <a href="https://twitter.com/Sonic_Galactic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="twitter.png" alt="Twitter"></a>
 <p></p>
