--- a/info/info.html
+++ b/info/info.html
@@ -3,7 +3,7 @@
 <title>Sonic Galactic</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="s1d.css" media="all">
+<link rel="stylesheet" type="text/css" href="info.css" media="all">
 </head>
 <h1 align="center"><i>Home</i></h1>
 <h2>description</h2>
