--- a/info/info.html
+++ b/info/info.html
@@ -3,10 +3,13 @@
 <title>Sonic Galactic</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="info.css" media="all">
+<link rel="stylesheet" type="text/css" href="s1d.css" media="all">
 </head>
 <h1 align="center"><i>Home</i></h1>
 <h2>description</h2>
 
 <a href="LINK"> Download </a>
+
+<h2>The Story:</h2>
+<h3>(story here)</h3>
 </html>
