Cleaning up the site before I head out
Hope y'all do something neat with the page. I'm sure you will, though. See ya!

--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
-<HTML>
-<HEAD>
-<TITLE>Sonic Galactic</TITLE>
+<html>
+<head>
+<title>Sonic Galactic</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="main.css" media="all">
-</HEAD>
+<link rel="stylesheet" type="text/css" href="index.css" media="all">
+</head>
 
-<!--<frameset rows='40,*' border='0' frameborder='0' framespacing='0'>
-<frame src='title.html' name='title' marginwidth='0' marginheight='0' scrolling='auto' noresize>
-<frameset cols='20%,*' border='0' frameborder='0' framespacing='0'>
-<frame src='menu.html' name='links' marginwidth='0' marginheight='0' scrolling='no' noresize>
-<frame src='home.html' name='index' marginwidth='0' marginheight='0' scrolling='no' noresize>
-</frameset>
-</frameset> OLD LAYOUT, DON'T USE ANYMORE!!-->
+<img style="display: block; margin-left: auto; margin-right: auto;" src="GalacticLogo.png" width="265" height="150" alt="Sonic Galactic"></a>
 
-<frameset cols='300,*' border='1' frameborder='1' framespacing='0'>
-<frame src='menu.html' name='rnmenu' marginwidth='0' marginheight='0' scrolling='false' noresize>
-<frameset rows='*,6%' border='1' frameborder='1' framespacing='0'>
-<frame src='home.html' name='rnindex' marginwidth='0' marginheight='0' scrolling='auto' noresize>
-<frame src='title.html' name='rntitle' marginwidth='0' marginheight='0' scrolling='false' noresize>
-</frameset>
-</frameset>
 
+<h1 align="center"><i>Presented by Starteam</i></h1>
+
+<h2 align="center">Site coming soon!</h2>
+<p>cool text here</p>
 </html>
