--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" type="text/css" href="index.css" media="all">
 </head>
 
+<a href="/about.html"></a>
+
 <img style="display: block; margin-left: auto; margin-right: auto;" src="GalacticLogo.png" width="265" height="150" alt="Sonic Galactic"></a>
 
 
