--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <img style="display: block; margin-left: auto; margin-right: auto;" src="GalacticLogo.png" width="265" height="150" alt="Sonic Galactic"></a>
 
 <a href="/about.html">About</a>
+<a href="/story.html">Story</a>
+<a href="/characters.html">Characters</a>
 
 <h1 align="center"><i>Presented by Starteam</i></h1>
 
