--- a/story.html
+++ b/story.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>About</h1>
-    <h2 align="center">knuckles chaotix</h2>
+    <h2 align="center">sonic fucking dies</h2>
 </body>
 </html>
