--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <a href="/about.html">About</a>
 <a href="/story.html">Story</a>
 <a href="/characters.html">Characters</a>
+<a href="/media.html">Screenshot and Media</a>
+<a href="/socials.html">Social Media</a>
+<a href="/download.html">Download</a>
 
 <h1 align="center"><i>Presented by Starteam</i></h1>
 
