--- a/media.html
+++ b/media.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Media & Screenshots</h1>
+    <h2 align="center">knuckles chaotix</h2>
 </body>
 </html>
