--- a/socials.html
+++ b/socials.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Social Media</h1>
+    <h2 align="center">twitter</h2>
 </body>
 </html>
