--- a/story.html
+++ b/story.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css" media="all">
 </head>
 <body>
-    <h1>About</h1>
+    <h1>Story</h1>
     <h2 align="center">sonic fucking dies</h2>
 </body>
 </html>
