--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
 <title>Sonic Galactic</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -19,4 +19,38 @@
 
 <h2 align="center">Site coming soon!</h2>
 <p>cool text here</p>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sonic Galactic</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header class="header">
+    <div class="logo">
+      <h1>Sonic Galactic</h1>
+    </div>
+    <nav class="nav">
+      <a href="#">About</a>
+      <a href="#">Story</a>
+      <a href="#">Characters</a>
+      <a href="#">Soundtrack</a>
+      <a href="#">Media</a>
+      <a href="#">Social Media</a>
+    </nav>
+  </header>
+  <main class="main">
+    <div class="content">
+      <h2>Presented by Starteam</h2>
+      <p>Site coming soon!</p>
+    </div>
+  </main>
+  <footer class="footer">
+    <p>© 2024 Starteam. All rights reserved.</p>
+  </footer>
+</body>
 </html>
