--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   <title>Sonic Galactic</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
+<img style="display: block; margin-left: auto; margin-right: auto;" src="GalacticLogo.png" width="265" height="150" alt="Sonic Galactic"></a>
+
+
 <body>
   <header class="header">
     <div class="logo">
