--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <p>Site coming soon!</p>
     </div>
   </main>
-  <footer class="footer">
+<!--   <footer class="footer">
     <p>© 2024 Starteam. All rights reserved.</p>
-  </footer>
+  </footer> -->
 </body>
 </html>
