--- a/index.html
+++ b/index.html
@@ -35,19 +35,17 @@
       <h1>Sonic Galactic</h1>
     </div>
     <nav class="nav">
-      <a href="#">About</a>
-      <a href="#">Story</a>
-      <a href="#">Characters</a>
-      <a href="#">Soundtrack</a>
-      <a href="#">Media</a>
-      <a href="#">Social Media</a>
+      <a href="/about.html">About</a>
+      <a href="/story.html">Story</a>
+      <a href="/characters.html">Characters</a>
+      <a href="/media.html">Media</a>
+      <a href="/socials.html">Social Media</a>
     </nav>
   </header>
   <main class="main">
     <img style="display: block; margin-left: auto; margin-right: auto;" src="GalacticLogo.png" width="265" height="150" alt="Sonic Galactic"></a>
     <div class="content">
       <h2>Presented by Starteam</h2>
-      <p>Site coming soon!</p>
     </div>
   </main>
 <!--   <footer class="footer">
