--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <h1>Sonic Galactic</h1>
+      <a href="/index.html"><h1>Sonic Galactic</h1></a>
     </div>
     <nav class="nav">
       <a href="/about.html">About</a>
