--- a/about.html
+++ b/about.html
@@ -1,12 +1,31 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="index.css" media="all">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sonic Galactic</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>About</h1>
-    <h2 align="center">knuckles chaotix</h2>
+  <header class="header">
+    <div class="logo">
+      <a href="/index.html"><h1>Sonic Galactic</h1></a>
+    </div>
+    <nav class="nav">
+      <a href="/about.html">About</a>
+      <a href="/story.html">Story</a>
+      <a href="/characters.html">Characters</a>
+      <a href="/media.html">Media</a>
+      <a href="/socials.html">Social Media</a>
+    </nav>
+  </header>
+  <main class="main">
+    <div class="content">
+      <p>knuckles chaotix</p>
+    </div>
+  </main>
+<!--   <footer class="footer">
+    <p>© 2024 Starteam. All rights reserved.</p>
+  </footer> -->
 </body>
 </html>
