--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
   </header>
   <main class="main">
-    <img style="display: block; margin-left: auto; margin-right: auto;" src="GalacticLogo.png" width="530" height="300" alt="Sonic Galactic"></a>
+    <img style="display: block; margin-left: auto; margin-right: auto;" src="logo.png" width="530" height="300" alt="Sonic Galactic"></a>
     <div class="content">
       <h2>Presented by Starteam</h2>
     </div>
