--- a/wip.html
+++ b/wip.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>Download Sonic Galactic</title>
+    <title>The Story of Sonic Galactic</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="icon.png">
   </head>
@@ -20,30 +19,29 @@
 </header>
 
   <body class="sitebody">
+
     <div class="blueteeth"></div>
-    <div class="bluebar" style="display: block; height: 100px;">
-      <h1 class="welcome-text">DOWNLOAD SONIC GALACTIC</h1>
+    <div class="bluebar" style="height: 100px; display: block;">
+      <h1 class="welcome-text">NO WAY? NO WAY!</h1>
     </div>
 
     <div class="indigoteeth"></div>
-    <div class="indigobar" style="height: 800px;">
-      <img src="sonic.png" style="position: absolute; top: 260px; width: 1600px;">
+    <div class="indigobar" style="height: 1100px;">
 
-      <div align="center" class="download-button" style="z-index: 1;">
-        <a class="download-text" href="wip.html">
-        DEMO 2 (WINDOWS)<br>
-        <img class="download-icon" src="./windows.png" style="width: 350px;">
-        </a>
-      </div>
+      <img align="center" src="sonic-and-fang.png">
+      <p align="center" style="color: #ffffff; font-size: 24px;">
+      <b>The webmaster has a nap. Hold out! Webmaster!<br></b>
+      This page isn't fully complete yet. Everything shown here is a 
+      work-in-progress.</p>
+
+      <a class="welcome-text" href="./index.html">
+          GO BACK
+      </a>
     </div>
-  </body>
 
-  <div style="z-index: 1">
-      <div class="indigobar">
+        <div class="indigobar">
       <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
       without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
       releases.</p>
     </div>
-  </div>
-
-</html>
+  </body>
