--- a/characters.html
+++ b/characters.html
@@ -1,16 +1,128 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="index.css" media="all">
-</head>
-<body>
-    <h1>Characters</h1>
-    <h2 align="center">sonic</h2>
-    <h2 align="center">tails</h2>
-    <h2 align="center">knux</h2>
-    <h2 align="center">peter griffin</h2>
-    <h2 align="center">paul</h2>
-</body>
+<html>
+  <head>
+    <title>Characters</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="icon.png">
+  </head>
+
+  <header class="sitenav">
+  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+
+  <nav class="navbar">
+    <a class="naventry" href="./download.html"><b>Download</b></a>
+    <a class="naventry" href="./characters.html"><b>Characters</b></a>
+    <a class="naventry" href="./wip.html"><b>About</b></a>
+    <a class="naventry" href="./story.html"><b>Story</b></a>
+    <a class="naventry" href="./wip.html"><b>Media</b></a>
+    <a class="naventry" href="./socials.html"><b>Socials</b></a>
+  </nav>
+</header>
+
+  <body class="sitebody">
+    <div class="blueteeth"></div>
+    <div class="bluebar" style="display: block; height: 100px;">
+      <h1 class="welcome-text">THE CAST OF SONIC GALACTIC</h1>
+    </div>
+
+    <div class="bluebar" style="height: 700px; justify-content: space-between;">
+      <div class="skewed-div2" style="position: absolute; top: 330px;">
+        <h1 class="skewed-header-right">
+          <div class="skewed-subbar"></div>
+          SONIC THE HEDGEHOG
+          <div class="skewed-subbar"></div>
+        </h1>
+      </div>
+
+      <img src="sonic-render.png" style="width: 500px; margin-left: 5%; z-index: 1;">
+
+      <div class="text-section" style="position: static; width: 40%; margin-right: 5%; z-index: 1;">
+        <p class="text-dark">
+          The blue blur filled with attitude, Sonic's always itching to embark on a new venture! With the prolonged absence of Dr. Eggman after their last battle, he starts to gain a false sense of security during his vacation, little does he know of what was to come...
+        </p>
+      </div>
+    </div>
+
+    <div class="bluebar" style="height: 700px;">
+      <div class="skewed-div" style="position: absolute; top: 1060px; background-color: #5d4816">
+        <h1 class="skewed-header" style="margin-left: 10%;">
+          <div class="skewed-subbar"></div>
+          MILES "TAILS" PROWER
+          <div class="skewed-subbar"></div>
+        </h1>
+      </div>
+
+      <div class="text-section" style="position: static; width: 40%; margin-left: 5%; z-index: 1;">
+        <p class="text-dark">
+          Sonic's closest ally and most trusted friend, this curious fox is always willing to follow alongside Sonic in his adventures! After scanning the badniks that disturbed their vacation, Tails (alongside Sonic) make haste for their source location, Dr. Eggman!
+        </p>
+      </div>
+
+     <img src="tails-render.png" style="width: 500px; margin-left: 15%; z-index: 1;">
+    </div>
+
+    <div class="bluebar" style="height: 700px; justify-content: space-between;">
+      <div class="skewed-div2" style="position: absolute; top: 1740px; background-color: #531011">
+        <h1 class="skewed-header-right">
+          <div class="skewed-subbar"></div>
+          KNUCKLES THE ECHIDNA
+          <div class="skewed-subbar"></div>
+        </h1>
+      </div>
+
+      <img src="knux-render.png" style="width: 500px; margin-left: 5%; z-index: 1;">
+
+      <div class="text-section" style="position: static; width: 40%; margin-right: 5%; z-index: 1;">
+        <p class="text-dark">
+          The steadfast protector of Angel Island and the Master Emerald. Knuckles quickly caught on to Dr. Eggman's resurfacing with the badniks that attacked Angel Island. None of them coming to target the Master Emerald raised Knuckles' suspicion well enough. Understanding what this meant, Knuckles meets up with Sonic and co. to take Dr. Eggman down for good.
+        </p>
+      </div>
+    </div>
+
+     <div class="bluebar" style="height: 700px;">
+      <div class="skewed-div" style="position: absolute; top: 2460px; background-color: #521044">
+        <h1 class="skewed-header" style="margin-left: 10%;">
+          <div class="skewed-subbar"></div>
+          FANG THE SNIPER
+          <div class="skewed-subbar"></div>
+        </h1>
+      </div>
+
+      <div class="text-section" style="position: static; width: 40%; margin-left: 5%; z-index: 1;">
+        <p class="text-dark">
+          This cunning jerboa always has a plan to make himself a bountiful profit (most of them to his detriment...). Fang didn't take too kindly to being abandoned in the Atomic Destroyer by Dr. Eggman, so he's teamed up with Sonic and co. to take him down... for purely selfish reasons and rewards, of course!
+        </p>
+      </div>
+
+     <img src="fang-render.png" style="width: 500px; margin-left: 15%; z-index: 1;">
+    </div>
+ 
+    <div class="bluebar" style="height: 700px; justify-content: space-between;">
+      <div class="skewed-div2" style="position: absolute; top: 3140px; background-color: #0e4a0a">
+        <h1 class="skewed-header-right">
+          <div class="skewed-subbar"></div>
+          TUNNEL THE MOLE
+          <div class="skewed-subbar"></div>
+        </h1>
+      </div>
+
+      <img src="tunnel-render.png" style="width: 500px; margin-left: 5%; z-index: 1;">
+
+      <div class="text-section" style="position: static; width: 40%; margin-right: 5%; z-index: 1;">
+        <p class="text-dark">
+          This excitable young mole is adventurous and always up for a challenge! After noticing the abnormalities of Illusion Island caused by Dr. Eggman, Tunnel makes the decision himself to follow Sonic and co.'s trail after deciphering they're to be trusted to get to the bottom of what's going on! 
+        </p>
+      </div>
+    </div>
+
+
+
+    <div class="indigoteeth"></div>
+
+        <div class="indigobar">
+      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
+      releases.</p>
+    </div>
+  </body>
+
 </html>
