--- a/index.html
+++ b/index.html
@@ -1,55 +1,105 @@
-<!-- <html>
-<head>
-<title>Sonic Galactic</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="index.css" media="all">
-</head>
-
-<img style="display: block; margin-left: auto; margin-right: auto;" src="GalacticLogo.png" width="265" height="150" alt="Sonic Galactic"></a>
-
-<a href="/about.html">About</a>
-<a href="/story.html">Story</a>
-<a href="/characters.html">Characters</a>
-<a href="/media.html">Screenshot and Media</a>
-<a href="/socials.html">Social Media</a>
-<a href="/download.html">Download</a>
-
-<h1 align="center"><i>Presented by Starteam</i></h1>
-
-<h2 align="center">Site coming soon!</h2>
-<p>cool text here</p>
-</html> -->
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sonic Galactic</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header class="header">
-    <div class="logo">
-      <a href="/index.html"><h1>Sonic Galactic</h1></a>
+<html>
+  <head>
+    <title>Sonic Galactic</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="icon.png">
+  </head>
+
+  <header class="sitenav">
+  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+
+  <nav class="navbar">
+    <a class="naventry" href="./download.html"><b>Download</b></a>
+    <a class="naventry" href="./characters.html"><b>Characters</b></a>
+    <a class="naventry" href="./wip.html"><b>About</b></a>
+    <a class="naventry" href="./story.html"><b>Story</b></a>
+    <a class="naventry" href="./wip.html"><b>Media</b></a>
+    <a class="naventry" href="./socials.html"><b>Socials</b></a>
+  </nav>
+</header>
+
+  <span class="circle"></span>
+  <div class="green-triangle"></div>
+  <div class="red-triangle"></div>
+  <body class="sitebody"> 
+    <img src="./starteam.png">
+    <img src="./galactic-logo.png">
+    <p> <b>*NOT affiliated with Sonic Team or SEGA Enterprises</b></p><br>
+
+    <div class="blueteeth"></div>
+    <div class="bluebar">
+
+      <div class="skewed-div">
+        <h1 class="skewed-header">
+          <div class="skewed-subbar"></div>
+            SONIC'S BACK IN ACTION!
+          <div class="skewed-subbar">
+            <b class="skewed-subheader">32-BIT POWER</b>
+          </div>
+        </h1>
+      </div>
+
+      <img class="gameplay-prev preview-1" src="titlescreen.png"> 
+
+      <div class="text-section" style="top: 1150px; left: 6%;">
+        <p class="text-dark">
+          <b>Sonic Galactic</b> is a fan-made interpretation of what a 2D-sidescrolling entry in the Sonic series
+          could have looked like on 32-bit, 5th Generation hardware. Sporting clean, 
+          hand-pixeled backgrounds and fluid animation, the game aims for an aesthetic that pays tribute to the best
+          of the era.<br><br>
+
+          Think of the game as a "what-if" scenario: an imagining of what Sonic Team could have potentially produced on 
+          the SEGA Saturn!<br><br>
+
+          While authenticity to hardware limitations is considered, <b>Sonic Galactic</b> draws from a number inspirations, 
+          not letting itself be limited to purely what systems of the time were capable of, nor what SEGA themselves would
+          have necessarily done.<br><br>
+
+          With new zones, new concepts, new characters, a new setting, and more, Galactic aims to put its own unique spin on the 
+          classic 2D Sonic formula, continuing both the storyline and gameplay set forth from the classic Genesis/Mega Drive games.
+        </p> 
+      </div>
     </div>
-    <nav class="nav">
-      <a href="/about.html">About</a>
-      <a href="/story.html">Story</a>
-      <a href="/characters.html">Characters</a>
-      <a href="/media.html">Media</a>
-      <a href="/socials.html">Social Media</a>
-    </nav>
-  </header>
-  <main class="main">
-    <img style="display: block; margin-left: auto; margin-right: auto;" src="logo.png" width="530" height="300" alt="Sonic Galactic"></a>
-    <div class="content">
-      <h2>Presented by Starteam</h2>
+
+    <div class="indigoteeth"></div>
+
+    <div class="indigobar bar2">
+      <div align="center" style="width: 100%; display: block;">
+        <img class="gameplay-prev2" src="mpv-shot0001.png">
+        <img class="gameplay-prev2" src="mpv-shot0002.png">
+        <img class="gameplay-prev2" src="mpv-shot0003.png">
+        <img class="gameplay-prev2" src="mpv-shot0004.png">
+        <img class="gameplay-prev2" src="mpv-shot0005.png">
+        <img class="gameplay-prev2" src="bonus.png">
+      </div>
     </div>
-  </main>
-<!--   <footer class="footer">
-    <p>© 2024 Starteam. All rights reserved.</p>
-  </footer> -->
-</body>
+
+    <!-- https://stackoverflow.com/questions/4919076/outline-effect-to-text -->
+    <div class="indigobar" style="display: block; height: 600px;">
+      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
+      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
+      <h1 class="welcome-text">WELCOME TO THE WORLD OF GALACTIC</h1>
+      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
+      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
+      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
+    </div>
+
+    <div class="indigobar" style="height: 500px;">
+      <div align="center" class="download-button">
+        <a class="download-text" href="./download.html">
+        DOWNLOAD DEMO 2<br>
+        <img class="download-icon" src="./download.png" style="width: 350px;">
+        </a>
+      </div>
+    </div>
+
+   
+        <div class="indigobar">
+      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
+      releases.</p>
+    </div>
+  </body>
+
 </html>
