--- a/socials.html
+++ b/socials.html
@@ -1,12 +1,48 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="index.css" media="all">
-</head>
-<body>
-    <h1>Social Media</h1>
-    <h2 align="center">twitter</h2>
-</body>
-</html>
+<html>
+  <head>
+    <title>Sonic Galactic on Social Media</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="icon.png">
+  </head>
+
+  <header class="sitenav">
+  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+
+  <nav class="navbar">
+    <a class="naventry" href="./download.html"><b>Download</b></a>
+    <a class="naventry" href="./characters.html"><b>Characters</b></a>
+    <a class="naventry" href="./wip.html"><b>About</b></a>
+    <a class="naventry" href="./story.html"><b>Story</b></a>
+    <a class="naventry" href="./wip.html"><b>Media</b></a>
+    <a class="naventry" href="./socials.html"><b>Socials</b></a>
+  </nav>
+</header>
+
+  <body class="sitebody">
+    <div class="blueteeth"></div>
+    <div class="bluebar" style="display: block; height: 700px;">
+      <h1 class="welcome-text">FOLLOW US ON SOCIAL MEDIA!</h1><br><br>
+      <div style="display: flex; flex-direction: row; justify-content: center; padding: 50px;">
+        <a href="https://x.com/Sonic_Galactic">
+          <img src="twitter.png" style="width: 400px;">
+        </a>
+
+        <a href="https://bsky.app/profile/sonicgalactic.bsky.social">
+          <img src="bluesky.png" style="width: 400px; padding-left: 50px; padding-right: 50px;">
+        </a>
+
+        <a href="https://www.youtube.com/@sonicgalactic7336">
+          <img src="youtube.png" style="width: 400px;">
+        </a>
+      </div>
+    </div>
+
+    <div class="indigoteeth"></div>
+    
+        <div class="indigobar">
+      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
+      releases.</p>
+    </div>
+
+  </body>
