--- a/download.html
+++ b/download.html
@@ -30,7 +30,7 @@
       <img src="sonic.png" style="position: absolute; top: 260px; width: 1600px;">
 
       <div align="center" class="download-button" style="z-index: 1;">
-        <a class="download-text" href="https://drive.google.com/file/d/1-CkV5AkbcfShqCxasGWDEahKsWIurcVk/view?usp=sharing">
+        <a class="download-text" href="wip.html">
         DEMO 2 (WINDOWS)<br>
         <img class="download-icon" src="./windows.png" style="width: 350px;">
         </a>
