add m1 mac link to downloads page

--- a/download.html
+++ b/download.html
@@ -29,11 +29,25 @@
     <div class="indigobar" style="height: 800px;">
       <img src="sonic.png" style="position: absolute; top: 260px; width: 1600px;">
 
-      <div align="center" class="download-button" style="z-index: 1;">
-        <a class="download-text" href="https://drive.google.com/file/d/1OpaKursJGRUSEwCFFEobelES6_b4pbGf/view?usp=sharing">
-        DEMO 2 (WINDOWS)<br>
-        <img class="download-icon" src="./windows.png" style="width: 350px;">
-        </a>
+      <div align="center" style="width: 65%; display: flex; justify-content: space-between;">
+        <div align="center" class="download-button" style="z-index: 1;">
+          <a class="download-text" href="https://cdn.tohoku.ac/sonicgalactic-demo2-win.zip">
+          DEMO 2 (WINDOWS)<br>
+          <img class="download-icon" src="./windows.png" style="width: 350px;">
+          </a>
+        </div>
+
+        <div style="z-index: 1;">
+          <div align="center" class="download-button">
+            <a class="download-text" href="https://cdn.tohoku.ac/sonicgalactic-demo2-m1.zip">
+            DEMO 2 (M1 MAC)<br>
+            <img class="download-icon" src="./apple.png" style="width: 350px;">
+            </a>
+          </div>
+          <p>
+            <br><a href="./gatekeeper.html" style="color: #ffffff; text-decoration: none;">Gatekeeper Workaround (Please Read)</a>
+          </p>
+        </div>
       </div>
     </div>
   </body>
