ok its up fr fr no cap

--- a/download.html
+++ b/download.html
@@ -31,8 +31,8 @@
 
       <div align="center" style="width: 65%; display: flex; justify-content: space-between;">
         <div align="center" class="download-button" style="z-index: 1;">
-          <a class="download-text" href="https://drive.google.com/file/d/1-CkV5AkbcfShqCxasGWDEahKsWIurcVk/view?usp=drive_link">
-          DEMO 2 (WINDOWS)<br>
+          <a class="download-text" href="https://cdn.tohoku.ac/sonicgalactic-demo2-patch1-win.zip">
+          DEMO 2 PATCH 1 (WINDOWS)<br>
           <img class="download-icon" src="./windows.png" style="width: 350px;">
           </a>
         </div>
