--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sonic Galactic</title>
+    <title>Sonic the Hedgehog Re:Mix</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="icon.png">
   </head>
 
   <header class="sitenav">
-  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+  <a class="cornerlogo" href="./index.html"><img src="Team Pink Gem Logo.png" width=240px;></div>
 
   <nav class="navbar">
-    <a class="naventry" href="./download.html"><b>Download</b></a>
+    <a class="naventry" href="./wip.html"><b>Download</b></a>
     <a class="naventry" href="./characters.html"><b>Characters</b></a>
     <a class="naventry" href="./wip.html"><b>About</b></a>
     <a class="naventry" href="./story.html"><b>Story</b></a>
@@ -23,8 +23,8 @@
   <div class="green-triangle"></div>
   <div class="red-triangle"></div>
   <body class="sitebody"> 
-    <img src="./starteam.png">
-    <img src="./galactic-logo.png">
+    <img src="./Team Pink Gem Logo.png">
+    <img src="./onic ReMix Logo.png">
     <p> <b>*NOT affiliated with Sonic Team or SEGA Enterprises</b></p><br>
 
     <div class="blueteeth"></div>
@@ -33,7 +33,7 @@
       <div class="skewed-div">
         <h1 class="skewed-header">
           <div class="skewed-subbar"></div>
-            SONIC'S BACK IN ACTION!
+            SONIC'S READY FOR THE MIX-UP!
           <div class="skewed-subbar">
             <b class="skewed-subheader">32-BIT POWER</b>
           </div>
@@ -44,20 +44,17 @@
 
       <div class="text-section" style="top: 1150px; left: 6%;">
         <p class="text-dark">
-          <b>Sonic Galactic</b> is a fan-made interpretation of what a 2D-sidescrolling entry in the Sonic series
-          could have looked like on 32-bit, 5th Generation hardware. Sporting clean, 
-          hand-pixeled backgrounds and fluid animation, the game aims for an aesthetic that pays tribute to the best
-          of the era.<br><br>
+          <b>Sonic the Hedgehog Re:Mix</b> is a fan-made interpretation and a moon facility mod of the next level with the 5 heroes 
+          join together known as "The 5 Zatchitatos". This game is called "Prism Legend", based on and inspired by the game "Captain Toad: Prism Star Quest". <br><br>
 
-          Think of the game as a "what-if" scenario: an imagining of what Sonic Team could have potentially produced on 
-          the SEGA Saturn!<br><br>
+          This game will surprise you with unexpected ways from the styles of the games of CORE FRAMEWORK, DKC4 Engine and More!<br><br>
 
-          While authenticity to hardware limitations is considered, <b>Sonic Galactic</b> draws from a number inspirations, 
+          While authenticity to hardware limitations is considered, <b>Sonic the Hedgehog Re:Mix</b> draws from a number inspirations, 
           not letting itself be limited to purely what systems of the time were capable of, nor what SEGA themselves would
           have necessarily done.<br><br>
 
-          With new zones, new concepts, new characters, a new setting, and more, Galactic aims to put its own unique spin on the 
-          classic 2D Sonic formula, continuing both the storyline and gameplay set forth from the classic Genesis/Mega Drive games.
+          With new zones, new concepts, new characters, a new setting, and more, Re:Mix aims to put its own unique spin on the 
+          classic 2D Sonic formula, making a spinout of the gameplay after the Fallen Star and Moon Facility & Galactic Sonic Fangames.
         </p> 
       </div>
     </div>
@@ -77,12 +74,12 @@
 
     <!-- https://stackoverflow.com/questions/4919076/outline-effect-to-text -->
     <div class="indigobar" style="display: block; height: 600px;">
-      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
-      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
-      <h1 class="welcome-text">WELCOME TO THE WORLD OF GALACTIC</h1>
-      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
-      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
-      <h1 class="outline-text">WELCOME TO THE WORLD OF GALACTIC</h1>
+      <h1 class="outline-text">LET'S REMIX IT UP</h1>
+      <h1 class="outline-text">LET'S REMIX IT UP</h1>
+      <h1 class="welcome-text">LET'S REMIX IT UP</h1>
+      <h1 class="outline-text">LET'S REMIX IT UP</h1>
+      <h1 class="outline-text">LET'S REMIX IT UP</h1>
+      <h1 class="outline-text">LET'S REMIX IT UP</h1>
     </div>
 
     <div class="indigobar" style="height: 500px;">
@@ -96,7 +93,7 @@
 
    
         <div class="indigobar">
-      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      <p class="sitefooter">Sonic the Hedgehog Re:Mix and Team Pink Gem are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
       without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
       releases.</p>
     </div>
