--- a/socials.html
+++ b/socials.html
@@ -6,10 +6,10 @@
   </head>
 
   <header class="sitenav">
-  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+  <a class="cornerlogo" href="./index.html"><img src="Team Pink Gem Logo.png" width=240px;></div>
 
   <nav class="navbar">
-    <a class="naventry" href="./download.html"><b>Download</b></a>
+    <a class="naventry" href="./wip.html"><b>Download</b></a>
     <a class="naventry" href="./characters.html"><b>Characters</b></a>
     <a class="naventry" href="./wip.html"><b>About</b></a>
     <a class="naventry" href="./story.html"><b>Story</b></a>
@@ -23,16 +23,8 @@
     <div class="bluebar" style="display: block; height: 700px;">
       <h1 class="welcome-text">FOLLOW US ON SOCIAL MEDIA!</h1><br><br>
       <div style="display: flex; flex-direction: row; justify-content: center; padding: 50px;">
-        <a href="https://x.com/Sonic_Galactic">
+        <a href="http://discord.gg/xRzY479fCS">
           <img src="twitter.png" style="width: 400px;">
-        </a>
-
-        <a href="https://bsky.app/profile/sonicgalactic.bsky.social">
-          <img src="bluesky.png" style="width: 400px; padding-left: 50px; padding-right: 50px;">
-        </a>
-
-        <a href="https://www.youtube.com/@sonicgalactic7336">
-          <img src="youtube.png" style="width: 400px;">
         </a>
       </div>
     </div>
@@ -40,7 +32,7 @@
     <div class="indigoteeth"></div>
     
         <div class="indigobar">
-      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      <p class="sitefooter">Sonic the Hedgehog Re:Mix and Team Pink Gem are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
       without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
       releases.</p>
     </div>
