--- a/socials.html
+++ b/socials.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Sonic Galactic on Social Media</title>
+    <title>Sonic Re:Mix on Social Media</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="icon.png">
   </head>
