--- a/characters.html
+++ b/characters.html
@@ -1,15 +1,15 @@
 <html>
   <head>
-    <title>Characters</title>
+    <title>The 5 Zatchitatos</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="icon.png">
   </head>
 
   <header class="sitenav">
-  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+  <a class="cornerlogo" href="./index.html"><img src="Team Pink Gem Logo.png" width=240px;></div>
 
   <nav class="navbar">
-    <a class="naventry" href="./download.html"><b>Download</b></a>
+    <a class="naventry" href="./wip.html"><b>Download</b></a>
     <a class="naventry" href="./characters.html"><b>Characters</b></a>
     <a class="naventry" href="./wip.html"><b>About</b></a>
     <a class="naventry" href="./story.html"><b>Story</b></a>
@@ -21,7 +21,7 @@
   <body class="sitebody">
     <div class="blueteeth"></div>
     <div class="bluebar" style="display: block; height: 100px;">
-      <h1 class="welcome-text">THE CAST OF SONIC GALACTIC</h1>
+      <h1 class="welcome-text">THE CAST OF SONIC RE:MIX</h1>
     </div>
 
     <div class="bluebar" style="height: 700px; justify-content: space-between;">
