--- a/characters.html
+++ b/characters.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>The 5 Zatchitatos</title>
+    <title>The 5 Zatchitatos (& Kuroku)</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="icon.png">
   </head>
@@ -33,11 +33,11 @@
         </h1>
       </div>
 
-      <img src="sonic-render.png" style="width: 500px; margin-left: 5%; z-index: 1;">
+      <img src="NewSonic.png" style="width: 500px; margin-left: 5%; z-index: 1;">
 
       <div class="text-section" style="position: static; width: 40%; margin-right: 5%; z-index: 1;">
         <p class="text-dark">
-          The blue blur filled with attitude, Sonic's always itching to embark on a new venture! With the prolonged absence of Dr. Eggman after their last battle, he starts to gain a false sense of security during his vacation, little does he know of what was to come...
+          The blue blur filled with attitude, Sonic's always itching to embark on a new venture! With Eggman gone for vacation, he starts to feel like things are different with that new villain and the new evil gang called "The Krusty Kremlin". What he knows now is to stop them from stealing it and must return it to where it came from.
         </p>
       </div>
     </div>
@@ -53,27 +53,27 @@
 
       <div class="text-section" style="position: static; width: 40%; margin-left: 5%; z-index: 1;">
         <p class="text-dark">
-          Sonic's closest ally and most trusted friend, this curious fox is always willing to follow alongside Sonic in his adventures! After scanning the badniks that disturbed their vacation, Tails (alongside Sonic) make haste for their source location, Dr. Eggman!
+          Sonic's closest ally and most trusted friend, this curious fox is always willing to follow alongside Sonic in his adventures! After scanning the badniks that disturbed their vacation, Tails (alongside Sonic) make haste for their source location, Kuroku!
         </p>
       </div>
 
-     <img src="tails-render.png" style="width: 500px; margin-left: 15%; z-index: 1;">
+     <img src="NewTails.png" style="width: 500px; margin-left: 15%; z-index: 1;">
     </div>
 
     <div class="bluebar" style="height: 700px; justify-content: space-between;">
       <div class="skewed-div2" style="position: absolute; top: 1740px; background-color: #531011">
         <h1 class="skewed-header-right">
           <div class="skewed-subbar"></div>
-          KNUCKLES THE ECHIDNA
+          METAL SONIC (MOON OF THE METAL)
           <div class="skewed-subbar"></div>
         </h1>
       </div>
 
-      <img src="knux-render.png" style="width: 500px; margin-left: 5%; z-index: 1;">
+      <img src="MetalSonic.png" style="width: 500px; margin-left: 5%; z-index: 1;">
 
       <div class="text-section" style="position: static; width: 40%; margin-right: 5%; z-index: 1;">
         <p class="text-dark">
-          The steadfast protector of Angel Island and the Master Emerald. Knuckles quickly caught on to Dr. Eggman's resurfacing with the badniks that attacked Angel Island. None of them coming to target the Master Emerald raised Knuckles' suspicion well enough. Understanding what this meant, Knuckles meets up with Sonic and co. to take Dr. Eggman down for good.
+          The Robot from the moon facility was pacified and became a good guy by Tails with his Pacify_Robot.exe data drive. Metal Sonic seeks out for the moonlight and joins in the 5 Zatchitatos team. As long as they stick together, they will be alright.
         </p>
       </div>
     </div>
@@ -82,34 +82,34 @@
       <div class="skewed-div" style="position: absolute; top: 2460px; background-color: #521044">
         <h1 class="skewed-header" style="margin-left: 10%;">
           <div class="skewed-subbar"></div>
-          FANG THE SNIPER
+          AMY ROSE
           <div class="skewed-subbar"></div>
         </h1>
       </div>
 
       <div class="text-section" style="position: static; width: 40%; margin-left: 5%; z-index: 1;">
         <p class="text-dark">
-          This cunning jerboa always has a plan to make himself a bountiful profit (most of them to his detriment...). Fang didn't take too kindly to being abandoned in the Atomic Destroyer by Dr. Eggman, so he's teamed up with Sonic and co. to take him down... for purely selfish reasons and rewards, of course!
+          The Delightful pink hedgehog girl with her Moon Hammer helps her slice and dice any foe that gets in her way and she likes Sonic a lot. She was a part of the 5 Zatchitatos team and they sticked together like birds of a feather.
         </p>
       </div>
 
-     <img src="fang-render.png" style="width: 500px; margin-left: 15%; z-index: 1;">
+     <img src="Amy.png" style="width: 500px; margin-left: 15%; z-index: 1;">
     </div>
  
     <div class="bluebar" style="height: 700px; justify-content: space-between;">
       <div class="skewed-div2" style="position: absolute; top: 3140px; background-color: #0e4a0a">
         <h1 class="skewed-header-right">
           <div class="skewed-subbar"></div>
-          TUNNEL THE MOLE
+          RAY THE FLYING SQUIRREL
           <div class="skewed-subbar"></div>
         </h1>
       </div>
 
-      <img src="tunnel-render.png" style="width: 500px; margin-left: 5%; z-index: 1;">
+      <img src="Ray.png" style="width: 500px; margin-left: 5%; z-index: 1;">
 
       <div class="text-section" style="position: static; width: 40%; margin-right: 5%; z-index: 1;">
         <p class="text-dark">
-          This excitable young mole is adventurous and always up for a challenge! After noticing the abnormalities of Illusion Island caused by Dr. Eggman, Tunnel makes the decision himself to follow Sonic and co.'s trail after deciphering they're to be trusted to get to the bottom of what's going on! 
+          The Bright-sided yellow squirrel jumps into the adventure with Sonic, Tails, Metal Sonic & Amy as they work together to be a group. This flying squirrel capes into action and soars through the air from dangerous rickety-rallies. He escaped Eggman before. but he's going after Kuroku to many places while his pals Knuckles, Mighty, Fang & Tunnel be busy doing other things.
         </p>
       </div>
     </div>
@@ -119,7 +119,7 @@
     <div class="indigoteeth"></div>
 
         <div class="indigobar">
-      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      <p class="sitefooter">Sonic the Hedgehog Re:Mix and Team Pink Gem are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
       without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
       releases.</p>
     </div>
