--- a/characters.html
+++ b/characters.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>The 5 Zatchitatos (& Kuroku)</title>
+    <title>The 5 Zatchitatos</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="icon.png">
   </head>
