--- a/story.html
+++ b/story.html
@@ -1,15 +1,15 @@
 <html>
   <head>
-    <title>The Story of Sonic Galactic</title>
+    <title>The Story of Sonic the Hedgehog Re:Mix</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="icon.png">
   </head>
 
   <header class="sitenav">
-  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+  <a class="cornerlogo" href="./index.html"><img src="Team Pink Gem Logo.png" width=240px;></div>
 
   <nav class="navbar">
-    <a class="naventry" href="./download.html"><b>Download</b></a>
+    <a class="naventry" href="./wip.html"><b>Download</b></a>
     <a class="naventry" href="./characters.html"><b>Characters</b></a>
     <a class="naventry" href="./wip.html"><b>About</b></a>
     <a class="naventry" href="./story.html"><b>Story</b></a>
@@ -21,57 +21,43 @@
   <body class="sitebody">
     <div class="blueteeth"></div>
     <div class="bluebar" style="display: block; height: 2600px;">
-      <h1 class="welcome-text">THE STORY OF SONIC GALACTIC</h1>
+      <h1 class="welcome-text">THE STORY OF SONIC RE:MIX</h1>
 
       <div style="margin: 5%; display: flex; flex-direction: row; width: 90%; justify-content: space-between;">
         <div class="text-section" style="position: static; width: 40%;">
           <p class="text-dark">
-          <b>Illusion Island</b>, a mysterious island that is set to appear once every decade in Sonic's world. Many eons ago, it was rumored to have a <b>meteorite of extreme power</b> crash into the island, bringing the force of a mysterious essence.<br><br>
+          <b>South Island's Capital City</b>, the home to many wild places and green hill, This capital city was built as a futuristic and modern park.<br><br>
 
-          Outside of that, its origins are a mystery, and no one is certain of its existence. Most of the island's mysteries lie down to its nature; from the different kinds of fauna never seen anywhere else, to even its surrounding water holding a different reflection of what is actually present.<br><br>
+          Many years ago, The capital city was built from little planet people called "Psychedelians". The Psychedelians built the city and made it what it looks like now.<br><br>
 
-          Due to its mysteriously rare appearance, the island went largely undocumented, and it would remain that way for a while. It would have stayed this way, until <b>a certain Egg-shaped menace</b> would choose to unravel the mysteries, and disturb the peace! 
+          But, one legend has it all... The Prism Star, The Prism Star is a magical star that appears down on earth every 9 years in south island's capital city. but after 1 year on earth, the prism star heads back to where it came from.
           </p>
         </div>
 
-        <img class="gameplay-prev" src="illusion-island.png" style="position: static; object-fit: contain;">
-      </div>
-
       <div style="margin: 5%; display: flex; flex-direction: row; width: 90%; justify-content: space-between;">
-        <img class="gameplay-prev" src="eggman.png" style="position: static; object-fit: contain;">
+        <img class="gameplay-prev" src="image.png" style="position: static; object-fit: contain;">
 
         <div class="text-section" style="position: static; width: 40%;">
           <p class="text-dark">
-          After the destruction of the <b>Death Egg</b> in <b>Sonic 3 & Knuckles</b>, as well as the <b>Atomic Destroyer</b> in <b>Sonic Triple Trouble</b>, <b>Sonic, Tails</b> and <b>Knuckles</b> celebrated their victory! Seeing as there would not be much for them to do, they all went their ways for an extended break, to relax. However, <b>Dr Eggman&apos;s</b> schemes were far from finished.<br><br> 
+          After the rescuement of the <b>Blue Star</b> in <b>Sonic and the Fallen Star</b>, as well as the <b>Moon Facility</b> in <b>Sonic and the Moon Facility</b>, And of course the <b>Illusion Island</b> in <b>Sonic Galactic</b>. <b>Sonic, Tails, Knuckles, Mighty, Ray, Amy, Metal Sonic, Fang</b> and <b>Tunnel</b> celebrated their victory! Resulting as a big move-in to build a boomtown in the middle of the park. Suddenly, A new foe called <b>Kuroku&apos;s</b> appeared and started to hunt down the Prism Star that was gonna land in the boomtown.<br><br> 
 
-          In the desperate searches of looking for a way to restore his practically destroyed army, his energy scanner picked up a mysterious power signature never seen before, coming from a location quite far from his base. A location of mystery; where the legendary <b>Illusion Island</b> was said to appear once every decade. Searching through his archives and books, while lacking information, Eggman had discovered that a meteor was said to have crashed there many eons ago. Also hearing that the <b>meteor had contained tons of energy with mysterious force,</b> the potential of utilizing such a tool would be great.<br><br>
+          Once they approached <b>South island's Capital City</b>, they landed to a spot where Sonic can build a boomtown, as Sonic pulled out the blueprint, they got ready for the big build. and after many minutes of building, they cheered happily and started inviting everyone to the boomtown. and they served food, and goodies for every guest. Later that night, a big flare wakes Sonic and Tunnel up. They look at the bright light in the night sky, thinking it's a new star, but it wasn't a new star...<br><br>
 
-          <b>Eggman</b> eventually took off to check it out for himself. Looking unto the meteor and its power, it was far beyond anything he had encountered before... and just what he needed to rebuild his army. Allowing him to build things twice as fast as he could ever with normal tools, just as efficiently and strong, <b>Eggman</b> had realized he found himself the greatest treasure yet! By this time, <b>Sonic</b> was becoming increasingly suspicious of <b>Eggman&apos;s</b> apparent disappearance. It wasn&apos;t until rumors of <b>Illusion Island&apos;s</b> reappearance and strange activity reached him that he knew that eggy-fellow was up to no good!
+          The Prism Star Appears and meteors down and hits Sonic and Tunnel once they started to run, launching sonic far into the road and felt dizzy and then, when Sonic and Tunnel saw the Prism Star, they were shocked and frightened in Disney's Chicken Little Style, As Tails was cooking at night for the customers, A loud scream disturbs Tails' cooking and then the recipe explodes on Tails, causing Tails, Knuckles, Mighty, Ray, Amy, Metal Sonic & fang to come outside to tell what happened.<br><br>
+            
+          Sonic and Tunnel point to the Prism Star and they were shocked. Tails got everyone to see this strange star appear out of nowhere. As Fang touched the Prism Star, it teleported to another place. But then, Kuroku and the Krusty Kremlin krew appeared. and they were shocked that the Prism Star Disappeared, Sonic argued with Kuroku and Kuroku decided that he'll be going after the Prism Star First and send his Kremlin Krew to stop them from returning the Prism Star.<br><br>
+
+          So Kuroku dashed off to get his hands on the prism star, Sonic decided to create a brigade called "The 5 Zatchitatos". Sonic, Tails, Metal Sonic, Amy & Ray unite together and went after the Prism Star too. The Adventure begins big time! Quest On!
+            
           </p>
         </div>
       </div>
-
-      <div style="margin: 5%; display: flex; flex-direction: row; width: 90%; justify-content: space-between;">
-        <div class="text-section" style="position: static; width: 40%;">
-          <p class="text-dark">
-          <b>Sonic</b> and his crew immediately left their break to see what <b>Eggman</b> was truly up to. They wouldn&apos;t know it until arrival, but they would have help to this task by a character who had spent his life on the island, and felt something wasn&apos;t right with <b>Eggman&apos;s</b> influence taking over slowly.<br><br>
-
-          Only the <b>seven Galactic Gems</b> scattered mysteriously across the island are capable of nullifying the Doctor&apos;s strong and seemingly unlimited power source. <b>Sonic and co.</b> must collect them to take a stand to <b>Eggman&apos;s</b> plans. Without them, <b>Eggman&apos;s</b> army of badniks will once again expand and threaten the entire world.<br><br>
-
-
-          <b>Go Sonic, Hurry! The fate of the world is depending on you!</b>
-          </p>
-        </div>
-
-        <img class="gameplay-prev" src="CGZ2Mural2.png" style="position: static; object-fit: contain;">
-      </div>
-    </div>
 
 
     <div class="indigoteeth"></div>
 
         <div class="indigobar">
-      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      <p class="sitefooter">Sonic the Hedgehog Re:Mix and Team Pink Gem are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
       without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
       releases.</p>
     </div>
