--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="red-triangle"></div>
   <body class="sitebody"> 
     <img src="./Team Pink Gem Logo.png">
-    <img src="./onic ReMix Logo.png">
+    <img src="./Sonic ReMix Logo.png">
     <p> <b>*NOT affiliated with Sonic Team or SEGA Enterprises</b></p><br>
 
     <div class="blueteeth"></div>
