--- a/index.html
+++ b/index.html
@@ -63,12 +63,9 @@
 
     <div class="indigobar bar2">
       <div align="center" style="width: 100%; display: block;">
-        <img class="gameplay-prev2" src="mpv-shot0001.png">
-        <img class="gameplay-prev2" src="mpv-shot0002.png">
-        <img class="gameplay-prev2" src="mpv-shot0003.png">
-        <img class="gameplay-prev2" src="mpv-shot0004.png">
-        <img class="gameplay-prev2" src="mpv-shot0005.png">
-        <img class="gameplay-prev2" src="bonus.png">
+        <img class="gameplay-prev2" src="Psychedelia Jungleria.png">
+        <img class="gameplay-prev2" src="Screenshot 2025-08-30 181148.png">
+        <img class="gameplay-prev2" src="Screenshot 2025-08-30 181242.png">
       </div>
     </div>
 
