--- a/wip.html
+++ b/wip.html
@@ -12,7 +12,6 @@
     <a class="naventry" href="./download.html"><b>Download</b></a>
     <a class="naventry" href="./characters.html"><b>Characters</b></a>
     <a class="naventry" href="./wip.html"><b>About</b></a>
-    <a class="naventry" href="./story.html"><b>Story</b></a>
     <a class="naventry" href="./wip.html"><b>Media</b></a>
     <a class="naventry" href="./socials.html"><b>Socials</b></a>
   </nav>
@@ -22,7 +21,7 @@
 
     <div class="blueteeth"></div>
     <div class="bluebar" style="height: 100px; display: block;">
-      <h1 class="welcome-text">NO WAY? NO WAY!</h1>
+      <h1 class="welcome-text">All I need to make is a few more extra touchups!</h1>
     </div>
 
     <div class="indigoteeth"></div>
@@ -40,7 +39,7 @@
     </div>
 
         <div class="indigobar">
-      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      <p class="sitefooter">Sonic the Hedgehog Re:Mix and Team Pink Gem are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
       without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
       releases.</p>
     </div>
