--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sonic Galactic</title>
+  <title>Sonic the Hedgehog Re:Mix</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
     <div class="logo">
-      <a href="/index.html"><h1>Sonic Galactic</h1></a>
+      <a href="/index.html"><h1>Sonic the Hedgehog Re:Mix</h1></a>
     </div>
     <nav class="nav">
       <a href="/about.html">About</a>
