--- a/socials.html
+++ b/socials.html
@@ -2,7 +2,7 @@
   <head>
     <title>Sonic Re:Mix on Social Media</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="Icon.png">
   </head>
 
   <header class="sitenav">
@@ -23,7 +23,7 @@
       <h1 class="welcome-text">FOLLOW US ON SOCIAL MEDIA!</h1><br><br>
       <div style="display: flex; flex-direction: row; justify-content: center; padding: 50px;">
         <a href="http://discord.gg/xRzY479fCS">
-          <img src="twitter.png" style="width: 400px;">
+          <img src="discord-round-color-icon.png" style="width: 400px;">
         </a>
       </div>
     </div>
