--- a/story.html
+++ b/story.html
@@ -2,7 +2,7 @@
   <head>
     <title>The Story of Sonic the Hedgehog Re:Mix</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="Icon.png">
   </head>
 
   <header class="sitenav">
@@ -12,7 +12,6 @@
     <a class="naventry" href="./wip.html"><b>Download</b></a>
     <a class="naventry" href="./characters.html"><b>Characters</b></a>
     <a class="naventry" href="./wip.html"><b>About</b></a>
-    <a class="naventry" href="./story.html"><b>Story</b></a>
     <a class="naventry" href="./wip.html"><b>Media</b></a>
     <a class="naventry" href="./socials.html"><b>Socials</b></a>
   </nav>
