--- a/wip.html
+++ b/wip.html
@@ -2,7 +2,7 @@
   <head>
     <title>The Story of Sonic Galactic</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="Icon.png">
   </head>
 
   <header class="sitenav">
