--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Sonic the Hedgehog Re:Mix</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="Icon.png">
   </head>
 
   <header class="sitenav">
