--- a/download.html
+++ b/download.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Download Sonic Galactic</title>
+    <title>Download Sonic Re:Mix</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="Icon.png">
   </head>
 
   <header class="sitenav">
-  <a class="cornerlogo" href="./index.html"><img src="galacticlogo_horizontal.png" width=240px;></div>
+  <a class="cornerlogo" href="./index.html"><img src="Team Pink Gem Logo.png" width=240px;></div>
 
   <nav class="navbar">
     <a class="naventry" href="./download.html"><b>Download</b></a>
     <a class="naventry" href="./characters.html"><b>Characters</b></a>
     <a class="naventry" href="./wip.html"><b>About</b></a>
-    <a class="naventry" href="./story.html"><b>Story</b></a>
     <a class="naventry" href="./wip.html"><b>Media</b></a>
     <a class="naventry" href="./socials.html"><b>Socials</b></a>
   </nav>
@@ -22,7 +21,7 @@
   <body class="sitebody">
     <div class="blueteeth"></div>
     <div class="bluebar" style="display: block; height: 100px;">
-      <h1 class="welcome-text">DOWNLOAD SONIC GALACTIC</h1>
+      <h1 class="welcome-text">DOWNLOAD SONIC RE:MIX</h1>
     </div>
 
     <div class="indigoteeth"></div>
@@ -32,18 +31,10 @@
       <div align="center" style="width: 65%; display: flex; justify-content: space-between;">
         <div align="center" class="download-button" style="z-index: 1;">
           <a class="download-text" href="https://cdn.tohoku.ac/sonicgalactic-demo2-patch1-win.zip">
-          DEMO 2 PATCH 1 (WINDOWS)<br>
+          DEMO 1 (WINDOWS)<br>
           <img class="download-icon" src="./windows.png" style="width: 350px;">
           </a>
         </div>
-
-        <div style="z-index: 1;">
-          <div align="center" class="download-button">
-            <a class="download-text" href="https://cdn.tohoku.ac/sonicgalactic-demo2-m1.zip">
-            DEMO 2 (M1 MAC)<br>
-            <img class="download-icon" src="./apple.png" style="width: 350px;">
-            </a>
-          </div>
           <p>
             <br><a href="./gatekeeper.html" style="color: #ffffff; text-decoration: none;">Gatekeeper Workaround (Please Read)</a>
           </p>
@@ -54,7 +45,7 @@
 
   <div style="z-index: 1">
       <div class="indigobar">
-      <p class="sitefooter">Sonic Galactic and Starteam are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
+      <p class="sitefooter">Sonic the Hedgehog Re:Mix and Team Pink Gem are <b>NOT</b> affiliated with Sonic Team or SEGA Enterprises. This is a fangame, developed
       without involvement from SEGA, without intent to profit in any fashion. Please support both SEGA and official Sonic the Hedgehog
       releases.</p>
     </div>
