--- a/info/info.html
+++ b/info/info.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Sonic Galactic</title>
+<title>Sonic the Hedgehog Re:Mix</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="info.css" media="all">
