--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </h1>
       </div>
 
-      <img class="gameplay-prev preview-1" src="titlescreen.png"> 
+      <img class="gameplay-prev preview-1" src="Screenshot 2025-08-30 191920.png"> 
 
       <div class="text-section" style="top: 1150px; left: 6%;">
         <p class="text-dark">
