--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="skewed-subbar"></div>
             SONIC'S READY FOR THE MIX-UP!
           <div class="skewed-subbar">
-            <b class="skewed-subheader">32-BIT POWER</b>
+            <b class="skewed-subheader">THE MANIA IS BACK!!!</b>
           </div>
         </h1>
       </div>
